--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,10 +9,13 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
+
   <h1>CRUD WebSocket</h1>
   <hr>
   <div class="container">
@@ -32,11 +35,19 @@
         </form>
       </div>
       <div class="col-md-8 p-2 border overflow-auto" style="height: 85vh;">
-        <div class="overflow-auto" id="notes"></div>
+        <div id="notes"></div>
+      </div>
+      <div id="notification" class="position-fixed bottom-0 end-0 p-3">
       </div>
     </div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+  </script>
   <script src="/socket.io/socket.io.min.js"></script>
   <script src="./ui.js"></script>
   <script src="./socket.js"></script>
